<resources>
    <string name="app_name">Auth-test</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="password">Password</string>
    <string name="registro">Registro</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="forzar_error">Forzar Error</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="prefs_file">com.example.auth_test.PREFERENCE.FILE_KEY</string>
    <string name="facebook_app_id">344196403532065</string>
    <string name="fb_login_protocol_scheme">fb344196403532065</string>
    <string name="proveedor">Proveedor</string>
    <string name="email">Email</string>
    <string name="calle_numero_piso">Calle, número, piso</string>
    <string name="telefono">Teléfono</string>
    <string name="guardar">GUARDAR</string>
    <string name="recuperar">RECUPERAR</string>
    <string name="eliminar">ELIMINAR</string>
</resources>